[package]
name = "karmacount"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.11", features = ["macros"] }
openssl = { version = "0.10.42", features = ["vendored"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
sled = "0.34.7"
anyhow = "1.0.66"
bincode = "1.3.3"
thiserror = "1.0.37"
chrono = "0.4.22"
